 * cleanup usage of StorageService.setMode() (CASANDRA-3388)
 * Add timing information to cassandra-cli GET/SET/LIST queries (CASSANDRA-3326)
 * Cache for CompressionMetadata objects (CASSANDRA-3427)
 * synchronize BiMap of bootstrapping tokens (CASSANDRA-3417)
 * Avoid large array allocation for compressed chunk offsets (CASSANDRA-3432)
Merged from 0.8:
 * acquire compactionlock during truncate (CASSANDRA-3399)
 * fix bug that caused first column in per row indexes to be ignored (CASSANDRA-3441)
 * fix DecimalType bytebuffer marshalling (CASSANDRA-3421)


1.0.1
 * acquire references during index build to prevent delete problems
   on Windows (CASSANDRA-3314)
 * describe_ring should include datacenter/topology information (CASSANDRA-2882)
 * Thrift sockets are not properly buffered (CASSANDRA-3261)
 * performance improvement for bytebufferutil compare function (CASSANDRA-3286)
 * add system.versions ColumnFamily (CASSANDRA-3140)
 * reduce network copies (CASSANDRA-3333, 3373)
 * limit nodetool to 32MB of heap (CASSANDRA-3124)
 * (CQL) update parser to accept "timestamp" instead of "date" (CASSANDRA-3149)
 * Fix CLI `show schema` to include "compression_options" (CASSANDRA-3368)
 * Snapshot to include manifest under LeveledCompactionStrategy (CASSANDRA-3359)
 * (CQL) SELECT query should allow CF name to be qualified by keyspace (CASSANDRA-3130)
 * (CQL) Fix internal application error specifying 'using consistency ...'
   in lower case (CASSANDRA-3366)
 * fix Deflate compression when compression actually makes the data bigger
   (CASSANDRA-3370)
 * optimize UUIDGen to avoid lock contention on InetAddress.getLocalHost 
   (CASSANDRA-3387)
 * tolerate index being dropped mid-mutation (CASSANDRA-3334, 3313)
 * CompactionManager is now responsible for checking for new candidates
   post-task execution, enabling more consistent leveled compaction 
   (CASSANDRA-3391)
 * Cache HSHA threads (CASSANDRA-3372)